# LightYearsGame

LightYears/: CMakeLists.txt
LightYears/LightYearsEngine/: CMakeLists.txt
LightYears/LightYearsEngine/include/: EntryPoint.h
LightYears/LightYearsEngine/include/framework/: Application.h  Core.h
LightYears/LightYearsEngine/src/: EntryPoint.cpp
LightYears/LightYearsEngine/src/framework/: Application.cpp
LightYears/LightYearsGame/: CMakeLists.txt
LightYears/LightYearsGame/include/GameFramework/: GameApplication.h
LightYears/LightYearsGame/include/framework/: Application.h
LightYears/LightYearsGame/src/GameFramework/: GameApplication.cpp
LightYears/LightYearsGame/src/framework/: Application.cpp  main.cpp
